--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -6,24 +6,26 @@
   </div>
 
   <div class="container">
-    <div class="options-container card mb-0 p-3">
-      <div
-        *ngFor="let center of centers; index as i"
-        (click)="handleCenterChange(i)"
-        class="flex align-items-center cursor-pointer select-none p-3 transition-colors transition-duration-150 border-round"
-        [ngClass]="{
-          active: activeIndex === i,
-          'hover:surface-hover': activeIndex !== i
-        }"
-      >
-        {{ center.attributes.title }}
+    <div class="options-container">
+      <div class="options-subcontainer mb-0 p-3">
+        <div
+          *ngFor="let center of centers; index as i"
+          (click)="handleCenterChange(i)"
+          class="flex align-items-center cursor-pointer select-none p-3 transition-colors transition-duration-150 border-round"
+          [ngClass]="{
+            active: activeIndex === i,
+            'hover:surface-hover': activeIndex !== i
+          }"
+        >
+          {{ center.attributes.title }}
+        </div>
       </div>
     </div>
 
-    <div class="subcontainer card">
+    <div class="subcontainer">
       <div class="center-container" *ngIf="selectedCenter">
-        <div>
-          <div class="content-container">
+        <div class="content-container">
+          <div class="content-subcontainer">
             <h3 class="section-heading">
               {{ selectedCenter?.attributes?.title }}
             </h3>
