--- a/src/app/components/useful-links/useful-links.component.html
+++ b/src/app/components/useful-links/useful-links.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper mb-3">
   <h3 class="text-center main-heading">{{ pageData?.title }}</h3>
-  <div class="px-4">
+  <div>
     <!-- <div *ngFor="let link of links" class="link-component">
       <a class="fancy" [href]="link.link">
         <span class="top-key"></span>
