--- a/src/app/components/attestation-process/attestation-process.component.scss
+++ b/src/app/components/attestation-process/attestation-process.component.scss
@@ -7,16 +7,21 @@
   }
 
   .options-container {
-    min-height: 20rem;
+    width: 25%;
+    border-radius: 8px;
 
-    @media (max-width: 500px) {
-      width: 100%;
-      display: flex;
-      gap: 10px;
-      overflow-x: auto;
+    .options-subcontainer {
+      min-height: 20rem;
+      background: #fff;
+      border-radius: 14px;
+      box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.1),
+        0px 24px 36px rgba(0, 0, 0, 0.04);
     }
 
     .option {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
       padding: 1rem;
       cursor: pointer;
       border-radius: 8px;
@@ -25,7 +30,31 @@
 
     .active {
       background: var(--blue-100);
+      padding: 1rem;
+      border-radius: 8px;
       font-weight: 700;
+    }
+
+    @media (max-width: 600px) {
+      width: 100%;
+      overflow-x: auto;
+      background: #fff;
+      border-radius: 14px;
+      box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.1),
+        0px 24px 36px rgba(0, 0, 0, 0.04);
+
+      .options-subcontainer {
+        min-height: 0;
+        width: 100%;
+        display: flex;
+        background: transparent;
+        box-shadow: none;
+        margin-right: 1rem;
+      }
+
+      .option {
+        flex: 2 0 auto;
+      }
     }
   }
 
