--- a/src/app/components/customer-experience/customer-experience.component.html
+++ b/src/app/components/customer-experience/customer-experience.component.html
@@ -1,39 +1,13 @@
 <div class="wrapper mb-3">
-  <div class="card">
-    <div
-      class="text-900 font-bold text-xl"
-      [ngClass]="{ 'mb-3': pageData?.description }"
-    >
-      {{ pageData?.heading }}
-    </div>
-    <p class="text-600 line-height-3">{{ pageData?.description }}</p>
+  <div class="my-4">
+    <h3 class="mb-0 main-heading text-center">
+      {{ pageData?.title }}
+    </h3>
   </div>
 
-  <div class="flex flex-column md:flex-row gap-5">
-    <div class="card mb-0 md:w-20rem">
-      <ul class="list-none m-0 p-0">
-        <li
-          pRipple
-          *ngFor="let item of items; let i = index"
-          (click)="changeItem(i)"
-          class="mb-2"
-        >
-          <a
-            class="flex align-items-center cursor-pointer select-none p-3 transition-colors transition-duration-150 border-round"
-            [ngClass]="{
-              'bg-primary': activeIndex === i,
-              'hover:surface-hover': activeIndex !== i
-            }"
-          >
-            <span>{{ item?.title }}</span>
-          </a>
-        </li>
-      </ul>
-    </div>
+  
+  <div class="flex flex-column md:flex-row gap-3">
     <div class="card flex-1">
-      <div class="text-900 font-bold text-xl mb-3">
-        {{ items[activeIndex]?.title }}
-      </div>
       <div
         class="line-height-3 m-0 p-0"
         [innerHTML]="loadAnswer(items[activeIndex]?.content)"
