--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,11 +1,7 @@
 .hero-section {
-  height: calc(63vh - 5rem);
+  // height: calc(63vh - 5rem);
   width: 99.6vw;
-  background: linear-gradient(
-    178deg,
-    rgba(0, 70, 191, 1) 13%,
-    rgba(108, 148, 218, 1) 99%
-  );
+  background: #fff;
   position: relative;
   overflow: hidden;
 
@@ -14,46 +10,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
-  @media (min-width: 768px) {
-    height: calc(47vh - 5rem);
-  }
-
-  @media (min-width: 900px) {
-    height: calc(53vh - 5rem);
-  }
-
-  @media (min-width: 900px) {
-    height: calc(57vh - 5rem);
-  }
-
-  @media (min-width: 1100px) {
-    height: calc(61vh - 5rem);
-  }
-
-  @media (min-width: 1200px) {
-    height: calc(63vh - 5rem);
-  }
-
-  @media (min-width: 1400px) {
-    height: calc(75vh - 5rem);
-  }
-
-  @media (min-width: 1500px) {
-    height: calc(80vh - 5rem);
-  }
-
-  @media (min-width: 1600px) {
-    height: calc(85vh - 5rem);
-  }
-
-  @media (min-width: 1700px) {
-    height: calc(90vh - 5rem);
-  }
-
-  @media (min-width: 1800px) {
-    height: calc(95vh - 5rem);
-  }
 
   .hero-banner-carousel {
     height: 100%;
@@ -68,7 +24,7 @@
     object-fit: cover;
 
     @media (max-width: 576px) {
-      height: 30rem;
+      height: 40rem;
       object-fit: cover;
     }
     // right: 0;
@@ -79,6 +35,10 @@
     height: 95px;
     border-radius: 10rem;
     object-fit: cover;
+
+    @media (max-width: 576px) {
+      display: none;
+    }
   }
 
   // background: #282c34;
@@ -87,6 +47,9 @@
     width: 80%;
     margin: 0 auto;
     position: absolute;
+    padding: 1rem;
+    background: #00000035;
+    border-radius: 0.8rem;
   }
 
   .main {
@@ -151,6 +114,12 @@
     }
   }
 
+  @media screen and (max-width: 1100px) {
+    h1 {
+      font-size: 3rem;
+    }
+  }
+
   @media screen and (max-width: 600px) {
     h1 {
       text-align: center;
@@ -186,12 +155,6 @@
       72.5% {
         top: -6.375rem;
       }
-    }
-  }
-
-  @media screen and (max-width: 1100px) {
-    h1 {
-      font-size: 3rem;
     }
   }
 
@@ -500,7 +463,6 @@
 
 .performance-container {
   padding: 3rem 2rem 2rem;
-  margin-top: 2rem;
   background: #feef22;
 
   .performance-subcontainer {
@@ -521,12 +483,31 @@
     color: #000;
     font-family: "Poppins-500";
   }
+
+  @media (max-width: 600px) {
+    padding: 1rem;
+
+    .performance-subcontainer {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 1rem;
+    }
+  }
 }
 
 .banner-carousel {
   padding: 2rem;
 
+  width: 88%;
+  max-width: 1500px;
+  margin: 0 auto;
+
   @media (max-width: 500px) {
-    padding: 1rem 0;
+    padding: 0;
+    width: 100%;
+
+    h3 {
+      padding: 1rem 0 0 1rem;
+    }
   }
 }
