--- a/src/app/components/shared/header/header.component.scss
+++ b/src/app/components/shared/header/header.component.scss
@@ -26,6 +26,14 @@
       }
     }
   }
+
+  @media (max-width: 600px) {
+    padding: 0 1rem;
+
+    .option {
+      display: none;
+    }
+  }
 }
 
 .topnav a {
@@ -75,11 +83,11 @@
   text-align: left;
 }
 
-.topnav a:hover,
-.dropdown:hover .dropbtn {
-  // background-color: #555;
-  // color: white;
-}
+// .topnav a:hover,
+// .dropdown:hover .dropbtn {
+//   // background-color: #555;
+//   // color: white;
+// }
 
 .dropdown-content a:hover {
   background-color: #ddd;
@@ -174,4 +182,67 @@
 .submenu-dropdown:hover .submenu-dropdown-content {
   display: grid;
   grid-template-columns: 1fr 1fr;
+}
+
+.brand-logo-img {
+  width: 230px;
+
+  @media (max-width: 600px) {
+    width: 180px;
+  }
+}
+
+.dropdown-mobile {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown-mobile .dropbtn-mobile {
+  font-size: 17px;
+  border: none;
+  outline: none;
+  padding: 18px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content-mobile {
+  display: none;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  z-index: 1;
+  border-radius: 1rem;
+  margin: 0 1rem;
+}
+
+.dropdown-content-mobile a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+// .topnav a:hover,
+// .dropdown:hover .dropbtn {
+//   // background-color: #555;
+//   // color: white;
+// }
+
+.dropdown-content-mobile a:hover {
+  background-color: #ddd;
+  color: black;
+  border-radius: 1rem;
+}
+
+.dropdown-content-mobile-active {
+  display: flex;
+  flex-direction: column;
+}
+
+.option-mobile {
+  padding: 18px 16px;
+  color: #000;
 }
